# embodiment-alignment

./: .gitignore  README.md  cka_layer_metrics.json  cka_results.md  h_and_r.py  inference_app.py  local_site.py  pyproject.toml
scripts/: probe.py  scan_episode.py
static/: index.html
static/samples/: manifest.json
